--- a/public/style.css
+++ b/public/style.css
@@ -1,71 +1,265 @@
-*{
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-body{
-    padding: 0 50px 0 50px;
+@font-face {
+  font-family: "Koulen";
+  src: url(../fonts/Koulen-Regular.ttf);
+}
+@font-face {
+  font-family: "Metrophobic";
+  src: url(../fonts/Metrophobic-Regular.ttf);
+}
+body {
+  background: linear-gradient(135deg, #87EFC1 0%, #A0E3FF 100%);
+  font-family: "Metrophobic";
 }
 
-.box{
-    height: 300px;
-    display: flex;
-    width: 80%;
-    overflow-x: scroll;
-    justify-content: center;
-    align-items: center;
-    gap: 100px;
+header {
+  background-color: #0E2225;
+  display: flex;
+  justify-content: space-between;
+  box-shadow: 0px 12.1935px 18.2903px rgba(0, 0, 0, 0.25);
 }
 
-
-.card{
-    height: 210px;
-    width: 150px;
-    min-width: 150px;
-    display: block;
-    border: solid 2px rgb(255, 0, 0);
-    border-radius: 22px;
-    position: relative;
-    cursor: pointer;
+.logo-carbon {
+  width: auto;
+  height: 70px;
 }
 
-.card:hover{
-    transform: translateY(-10px);
-    transition: transform 0.1s;
+h1, h2, .btn-articles, .btn-regles {
+  font-family: "Koulen";
 }
 
-.plus{
-    display: block;
-    width: 30px;
-    height: 3px;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    background-color: black;
-    border-radius: 20px;
+a {
+  text-decoration: none;
 }
 
-.plus::after{
-    content: '';
-    display: block;
-    width: 3px;
-    height: 30px;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    background-color: black;
-    border-radius: 20px;
+.btn-articles {
+  background-color: #0E2225;
+  border: none;
+  border-left: 3px solid #315357;
+  font-size: 30px;
+  padding: 10px 15px;
+  color: white;
 }
 
-.imgcard{
-    width: 100%;
-    height: 100%;
-    border-radius: 20px;
+.btn-articles:hover {
+  color: #87EFC1;
 }
 
-.hide{
-    display: none;
+.div-accueil {
+  display: flex;
+  margin-top: 15vh;
+  justify-content: space-around;
 }
+
+.carbon {
+  width: 45%;
+}
+
+.h1 {
+  font-size: 210px;
+}
+
+.carbon-description {
+  text-align: justify;
+  width: 70%;
+}
+
+.jouer {
+  background-color: #315357;
+  border-radius: 6px;
+  color: white;
+  width: 45%;
+  position: relative;
+  height: 70vh;
+}
+
+.h2 {
+  font-size: 50px;
+  text-align: center;
+  text-shadow: 0px 4.87742px 4.87742px rgba(0, 0, 0, 0.25);
+}
+
+.begin {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: flex-end;
+}
+
+h3 {
+  font-size: 25px;
+  text-align: center;
+  text-shadow: 0px 4.87742px 4.87742px rgba(0, 0, 0, 0.25);
+}
+
+.logo {
+  text-align: center;
+}
+
+.btn-regles {
+  position: absolute;
+  bottom: 15px;
+  right: 15px;
+  font-size: 25px;
+  color: white;
+  background-color: #9EE2FF;
+  border: none;
+  border-radius: 14px;
+  padding: 0px 18px;
+  text-shadow: 0px 4.87742px 4.87742px rgba(0, 0, 0, 0.25);
+}
+
+footer {
+  position: relative;
+  margin-top: 50px;
+  padding: 12px;
+}
+
+.copyright {
+  position: absolute;
+  bottom: 10px;
+  right: 10px;
+  font-size: 12px;
+}
+
+i {
+  color: black;
+  font-size: 30px;
+  margin-top: 5px;
+}
+
+.reseaux {
+  display: flex;
+  gap: 8px;
+}
+
+.h1-game-setup {
+  text-align: center;
+  font-size: 80px;
+}
+
+.section-regles {
+  background-color: #315357;
+  margin: 40px;
+  color: #fff;
+  border-radius: 10px;
+}
+
+.h1-regles {
+  font-size: 60px;
+  text-align: center;
+}
+
+.div-regles {
+  display: flex;
+  justify-content: space-around;
+  margin-top: 40px;
+  padding: 30px 0px 50px 0px;
+}
+
+.boutons-regles {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.section-regles-droite {
+  width: 50%;
+}
+
+.section-regles-droite p {
+  text-align: justify;
+  margin-top: 16px;
+}
+
+.h2-regles {
+  color: #87EFC1;
+}
+
+button {
+  padding: 0.5rem;
+  border-radius: 20px;
+  border: none;
+  background-color: #0E2225;
+  color: #fff;
+}
+
+button:hover {
+  background-color: #87EFC1;
+  color: #0E2225;
+  cursor: pointer;
+}
+
+.bouton-retour {
+  color: #fff;
+}
+
+/*
+SELECT CARD WIP--------------------------------------
+*/
+.box {
+  height: 300px;
+  display: flex;
+  width: 80%;
+  overflow-x: scroll;
+  justify-content: center;
+  align-items: center;
+  gap: 100px;
+}
+
+.card {
+  height: 210px;
+  width: 150px;
+  min-width: 150px;
+  display: block;
+  border: solid 2px rgb(255, 0, 0);
+  border-radius: 22px;
+  position: relative;
+  cursor: pointer;
+}
+
+.card:hover {
+  transform: translateY(-10px);
+  transition: transform 0.1s;
+}
+
+.plus {
+  display: block;
+  width: 30px;
+  height: 3px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: black;
+  border-radius: 20px;
+}
+
+.plus::after {
+  content: "";
+  display: block;
+  width: 3px;
+  height: 30px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: black;
+  border-radius: 20px;
+}
+
+.imgcard {
+  width: 100%;
+  height: 100%;
+  border-radius: 20px;
+}
+
+.hide {
+  display: none;
+}
+
+/*# sourceMappingURL=style.css.map */
