:sparkles: fix arborescence et liens

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,3 +1,4 @@
 @use '../scss/init.scss';
 @use '../scss/pages/homepage.scss';
 @use '../scss/pages/select-cards.scss';
+@use '../scss/pages/regles.scss';
