:sparkles: page regles + :iphone: mobile version

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,4 +1,5 @@
 @use '../scss/init.scss';
+@use '../scss/pages/mixins';
 @use '../scss/pages/homepage.scss';
 @use '../scss/pages/select-cards.scss';
 @use '../scss/pages/regles.scss';
