--- a/public/style.css
+++ b/public/style.css
@@ -29,6 +29,16 @@ header {
   height: 70px;
 }
 
+.fab {
+  color: #fff;
+  font-size: 25px;
+  margin-right: 15px;
+}
+
+.fab:hover {
+  color: #87EFC1;
+}
+
 h1, h2, .btn-articles, .btn-regles {
   font-family: "Koulen";
 }
@@ -44,6 +54,12 @@ a {
   font-size: 30px;
   padding: 10px 15px;
   color: white;
+  letter-spacing: 0.15em;
+}
+@media screen and (max-width: 700px) {
+  .btn-articles {
+    display: none;
+  }
 }
 
 .btn-articles:hover {
@@ -125,11 +141,11 @@ footer {
   right: 10px;
   font-size: 12px;
 }
-
-i {
-  color: black;
-  font-size: 30px;
-  margin-top: 5px;
+@media screen and (max-width: 700px) {
+  .copyright {
+    position: relative;
+    text-align: center;
+  }
 }
 
 .reseaux {
@@ -216,15 +232,49 @@ i {
   margin-top: 40px;
   padding: 30px 0px 50px 0px;
 }
+@media screen and (max-width: 700px) {
+  .div-regles {
+    flex-direction: column;
+    margin-top: 0px;
+  }
+}
 
 .boutons-regles {
   display: flex;
   flex-direction: column;
   gap: 20px;
 }
+@media screen and (max-width: 700px) {
+  .boutons-regles {
+    display: none;
+  }
+}
+
+#boutons-regles-mobile {
+  display: none;
+  background-color: #0E2225;
+  color: #fff;
+  border-radius: 20px;
+  border: none;
+  padding: 0.5rem;
+  margin-left: 10%;
+}
+@media screen and (max-width: 700px) {
+  #boutons-regles-mobile {
+    display: block;
+  }
+}
 
 .section-regles-droite {
   width: 50%;
+  display: none;
+}
+@media screen and (max-width: 700px) {
+  .section-regles-droite {
+    width: 80%;
+    margin-left: 10%;
+    margin-top: 5%;
+  }
 }
 
 .section-regles-droite p {
@@ -236,7 +286,7 @@ i {
   color: #87EFC1;
 }
 
-button {
+.btn-rules {
   padding: 0.5rem;
   border-radius: 20px;
   border: none;
@@ -244,14 +294,26 @@ button {
   color: #fff;
 }
 
-button:hover {
+.btn-rules:hover {
+  cursor: pointer;
   background-color: #87EFC1;
   color: #0E2225;
-  cursor: pointer;
 }
 
 .bouton-retour {
   color: #fff;
+  background-color: #0E2225;
+  border-radius: 10px;
+  padding: 5px;
+}
+
+.active {
+  display: block;
+}
+
+.btn-active {
+  background-color: #87EFC1;
+  color: #0E2225;
 }
 
 /*# sourceMappingURL=style.css.map */
