--- a/scss/pages/_homepage.scss
+++ b/scss/pages/_homepage.scss
@@ -1,3 +1,5 @@
+@use "mixins";
+
 body {
     background: linear-gradient(135deg, #87EFC1 0%, #A0E3FF 100%);
     font-family: "Metrophobic";
@@ -15,6 +17,15 @@ header {
     height: 70px;
 }
 
+.fab {
+    color: #fff;
+    font-size: 25px;
+    margin-right: 15px;
+}
+.fab:hover {
+    color: #87EFC1;
+}
+
 h1, h2, .btn-articles, .btn-regles {
     font-family: "Koulen";
 }
@@ -30,6 +41,11 @@ a {
     font-size: 30px;
     padding: 10px 15px;
     color: white;
+    letter-spacing: 0.15em;
+
+    @include mixins.breakpoint(700px) {
+        display: none;
+    }
 }
 
 .btn-articles:hover {
@@ -110,12 +126,11 @@ footer {
     bottom: 10px;
     right: 10px;
     font-size: 12px;
-}
 
-i {
-    color: black;
-    font-size: 30px;
-    margin-top: 5px;
+    @include mixins.breakpoint(700px) {
+        position:relative;
+        text-align: center;
+    }
 }
 
 .reseaux {
