--- a/scss/pages/_regles.scss
+++ b/scss/pages/_regles.scss
@@ -1,3 +1,5 @@
+@use "mixins";
+
 .section-regles {
     background-color: #315357;
     margin: 40px;
@@ -15,16 +17,46 @@
     justify-content: space-around;
     margin-top: 40px;
     padding: 30px 0px 50px 0px;
+
+    @include mixins.breakpoint(700px) {
+        flex-direction: column;
+        margin-top: 0px;
+    }
 }
 
 .boutons-regles {
     display: flex;
     flex-direction: column;
     gap: 20px;
+
+    @include mixins.breakpoint(700px) {
+        display: none;
+    }
+}
+
+#boutons-regles-mobile {
+    display: none;
+    background-color: #0E2225;
+    color: #fff;
+    border-radius: 20px;
+    border: none;
+    padding: 0.5rem;
+    margin-left: 10%;
+
+    @include mixins.breakpoint(700px) {
+        display: block;
+    }
 }
 
 .section-regles-droite {
     width: 50%;
+    display: none;
+
+    @include mixins.breakpoint(700px) {
+        width: 80%;
+        margin-left: 10%;
+        margin-top: 5%;
+    }
 }
 
 .section-regles-droite p {
@@ -36,7 +68,7 @@
     color: #87EFC1;
 }
 
-button {
+.btn-rules {
     padding: 0.5rem;
     border-radius: 20px;
     border: none;
@@ -44,12 +76,24 @@ button {
     color: #fff;
 }
 
-button:hover {
+.btn-rules:hover {
+    cursor: pointer;
     background-color: #87EFC1;
     color: #0E2225;
-    cursor: pointer;
 }
 
 .bouton-retour {
     color: #fff;
+    background-color: #0E2225;
+    border-radius: 10px;
+    padding: 5px;
+}
+
+.active {
+    display: block;
+}
+
+.btn-active {
+    background-color: #87EFC1;
+    color: #0E2225;
 }
