:liptick: begin UI update for select-cards page

--- a/public/style.css
+++ b/public/style.css
@@ -27,6 +27,7 @@ header {
 .logo-carbon {
   width: auto;
   height: 70px;
+  padding-left: 10px;
 }
 
 .fab {
@@ -161,6 +162,7 @@ footer {
   justify-content: center;
   align-items: center;
   gap: 100px;
+  margin-left: 10%;
 }
 
 .card {
@@ -168,7 +170,7 @@ footer {
   width: 150px;
   min-width: 150px;
   display: block;
-  border: solid 2px rgb(255, 0, 0);
+  border: solid 2px #0E2225;
   border-radius: 22px;
   position: relative;
   cursor: pointer;
@@ -212,6 +214,11 @@ footer {
 
 .hide {
   display: none;
+}
+
+.sc-h1 {
+  text-align: center;
+  margin-top: 5vh;
 }
 
 .section-regles {
