--- a/scss/pages/_select-cards.scss
+++ b/scss/pages/_select-cards.scss
@@ -7,6 +7,7 @@
     justify-content: center;
     align-items: center;
     gap: 100px;
+    margin-left: 10%;
 }
 
 .card{
@@ -14,7 +15,7 @@
     width: 150px;
     min-width: 150px;
     display: block;
-    border: solid 2px rgb(255, 0, 0);
+    border: solid 2px #0E2225;
     border-radius: 22px;
     position: relative;
     cursor: pointer;
@@ -59,3 +60,5 @@
 .hide{
     display: none;
 }
+
+.sc-h1 {text-align: center; margin-top: 5vh;}
