--- a/scss/_init.scss
+++ b/scss/_init.scss
@@ -6,10 +6,10 @@
 
 @font-face {
     font-family: 'Koulen';
-    src: url(../public/fonts/Koulen-Regular.ttf);
+    src: url(./fonts/Koulen-Regular.ttf);
 }
 
 @font-face {
     font-family: 'Metrophobic';
-    src: url(../public/fonts/Metrophobic-Regular.ttf);
+    src: url(./fonts/Metrophobic-Regular.ttf);
 }
