--- a/scss/pages/_homepage.scss
+++ b/scss/pages/_homepage.scss
@@ -2,7 +2,10 @@
 
 body {
     background: linear-gradient(135deg, #87EFC1 0%, #A0E3FF 100%);
+    background-repeat: no-repeat;
+    background-size: cover;
     font-family: "Metrophobic";
+    height: 100vh;
 }
 
 header {
