--- a/scss/pages/_select-cards.scss
+++ b/scss/pages/_select-cards.scss
@@ -1,3 +1,4 @@
+@use 'mixins';
 
 .box{
     height: 300px;
@@ -62,3 +63,29 @@
 }
 
 .sc-h1 {text-align: center; margin-top: 5vh;}
+
+.selection{
+    width: 100vw;
+    height: 100vh;
+    position: fixed;
+    z-index: 1;
+    background-color: rgba($color: #000000, $alpha: .4);
+    top:0;
+    left: 0;
+    .select-zone{
+        background-color: #0E2225;
+        width: 30%;
+        height: 40%;
+        border-radius: 25px;
+        padding: 20px;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        @include mixins.flexdef;
+        p{
+            color: #fff;
+        }
+        
+    }
+}
