:sparkles:start home page front

--- a/scss/pages/_homepage.scss
+++ b/scss/pages/_homepage.scss
@@ -1,119 +1,156 @@
 @use "mixins";
 
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+
 body {
     background: linear-gradient(135deg, #87EFC1 0%, #A0E3FF 100%);
     font-family: "Metrophobic";
-}
+    height: 100vh;
 
-header {
-    background-color: #0E2225;
-    display: flex;
-    justify-content: space-between;
-    box-shadow: 0px 12.1935px 18.2903px rgba(0, 0, 0, 0.25);
-}
+    header {
+        background-color: #0E2225;
+        display: flex;
+        height: 72px;
+        justify-content: space-between;
+        box-shadow: 0px 12.1935px 18.2903px rgba(0, 0, 0, 0.25);
+    }
 
-.logo-carbon {
-    width: auto;
-    height: 70px;
-    padding-left: 10px;
-}
+    .logo-carbon {
+        width: auto;
+        height: 64px;
+        padding-left: 10px;
+    }
 
-.fab {
-    color: #fff;
-    font-size: 25px;
-    margin-right: 15px;
-}
-.fab:hover {
-    color: #87EFC1;
-}
+    div {
 
-h1, h2, .btn-articles, .btn-regles {
-    font-family: "Koulen";
-}
+        display: flex;
+        align-items: center;
 
-a {
-    text-decoration: none;
-}
+        .fab {
+            color: #fff;
+            font-size: 25px;
+            margin-right: 32px;
+        }
+    
+        .fab:hover {
+            color: #87EFC1;
+        }
 
-.btn-articles {
-    background-color: #0E2225;
-    border: none;
-    border-left: 3px solid #315357;
-    font-size: 30px;
-    padding: 10px 15px;
-    color: white;
-    letter-spacing: 0.15em;
+        .btn-articles {
+            background-color: #0E2225;
+            border: none;
+            border-left: 3px solid white;
+            font-size: 30px;
+            padding: 18px 15px;
+            color: white;
+            letter-spacing: 0.15em;
+        
+            @include mixins.breakpoint(700px) {
+                display: none;
+            }
+        }
+        
+        .btn-articles:hover {
+            color: #87EFC1;
+        }
 
-    @include mixins.breakpoint(700px) {
-        display: none;
+        a {
+            text-decoration: none;
+        }   
     }
 }
 
-.btn-articles:hover {
-    color: #87EFC1;
-}
+section {
 
-.div-accueil {
     display: flex;
-    margin-top: 15vh;
-    justify-content: space-around;
-}
 
-.carbon {
-    width: 45%;
-}
+    .rules {
+        width: 353px;
+        height: 338px;
+        background: rgba(201, 248, 227, 0.7);
+        box-shadow: 0px 4.88px 4.88px rgba(0, 0, 0, 0.25);
 
-.h1 {
-    font-size: 210px;
-}
+        .container {
+            display: flex;
+            flex-direction: column;
+            padding: 24px;
 
-.carbon-description {
-    text-align: justify;
-    width: 70%;
-}
+            h1 {
+                font-size: 32px;
+                padding-bottom: 32px;
+            }
 
-.jouer {
-    background-color: #315357;
-    border-radius: 6px;
-    color: white;
-    width: 45%;
-    position: relative;
-    height: 70vh;
-}
+            .rules-text {
+                display: flex;
+                flex-direction: column;
+                padding-bottom: 16px;
 
-.h2 {
-    font-size: 50px;
-    text-align: center;
-    text-shadow: 0px 4.87742px 4.87742px rgba(0, 0, 0, 0.25);
-}
+                p {
+                    font-size: 28px;
+                    margin-right: 109px;
+                }
 
-.begin {
-    display: flex;
-    justify-content: space-evenly;
-    align-items: flex-end;
-}
+                div {
 
-h3 {
-    font-size: 25px;
-    text-align: center;
-    text-shadow: 0px 4.87742px 4.87742px rgba(0, 0, 0, 0.25);
-}
+                    p {
+                        font-size: 22px;
+                        margin-right: 16px;
+                    }
+    
+                    img {
+                        width: 84px;
+                        height: 103px; 
+                    }
+                }
+            }
 
-.logo {
-    text-align: center;
-}
+            .slider {
+                display: flex;
+                justify-content: space-between;
+                gap: 10px;
+                padding-bottom: 10px;
 
-.btn-regles {
-    position: absolute;
-    bottom: 15px;
-    right: 15px;
-    font-size: 25px;
-    color: white;
-    background-color: #9EE2FF;
-    border: none;
-    border-radius: 14px;
-    padding: 0px 18px;
-    text-shadow: 0px 4.87742px 4.87742px rgba(0, 0, 0, 0.25);
+                .circle{
+                    border-radius:50%;
+                    width:10px;
+                    height:10px;
+                    background: #0E2225;
+                    opacity: 0.75; 
+                }
+            }
+
+            .btn {
+                width: 199px;
+                height: 41px;
+                background: #1EE18B;
+                box-shadow: 0px 4.87742px 4.87742px rgba(0, 0, 0, 0.1);
+                border-radius: 5px;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+
+                p {
+                    color: white;
+                }
+            }
+        }
+    }
+
+    .setup {
+
+        .container_1 {
+            width: 494px;
+            height: 475px;
+            background: rgba(14, 34, 37, 0.6);
+            border: 5px solid #FFFFFF;
+            border-right: 0px;
+        }
+
+    }
 }
 
 footer {
