--- a/public/style.css
+++ b/public/style.css
@@ -1,133 +1,126 @@
 * {
-  margin: 0;
   padding: 0;
+  margin: 0;
   box-sizing: border-box;
 }
 
-@font-face {
-  font-family: "Koulen";
-  src: url(../public/fonts/Koulen-Regular.ttf);
-}
-@font-face {
-  font-family: "Metrophobic";
-  src: url(../public/fonts/Metrophobic-Regular.ttf);
-}
 body {
   background: linear-gradient(135deg, #87EFC1 0%, #A0E3FF 100%);
   font-family: "Metrophobic";
+  height: 100vh;
 }
-
-header {
+body header {
   background-color: #0E2225;
   display: flex;
+  height: 72px;
   justify-content: space-between;
   box-shadow: 0px 12.1935px 18.2903px rgba(0, 0, 0, 0.25);
 }
-
-.logo-carbon {
+body .logo-carbon {
   width: auto;
-  height: 70px;
+  height: 64px;
   padding-left: 10px;
 }
-
-.fab {
+body div {
+  display: flex;
+  align-items: center;
+}
+body div .fab {
   color: #fff;
   font-size: 25px;
-  margin-right: 15px;
+  margin-right: 32px;
 }
-
-.fab:hover {
+body div .fab:hover {
   color: #87EFC1;
 }
-
-h1, h2, .btn-articles, .btn-regles {
-  font-family: "Koulen";
-}
-
-a {
-  text-decoration: none;
-}
-
-.btn-articles {
+body div .btn-articles {
   background-color: #0E2225;
   border: none;
-  border-left: 3px solid #315357;
+  border-left: 3px solid white;
   font-size: 30px;
-  padding: 10px 15px;
+  padding: 18px 15px;
   color: white;
   letter-spacing: 0.15em;
 }
 @media screen and (max-width: 700px) {
-  .btn-articles {
+  body div .btn-articles {
     display: none;
   }
 }
-
-.btn-articles:hover {
+body div .btn-articles:hover {
   color: #87EFC1;
 }
+body div a {
+  text-decoration: none;
+}
 
-.div-accueil {
+section {
   display: flex;
-  margin-top: 15vh;
-  justify-content: space-around;
 }
-
-.carbon {
-  width: 45%;
+section .rules {
+  width: 353px;
+  height: 338px;
+  background: rgba(201, 248, 227, 0.7);
+  box-shadow: 0px 4.88px 4.88px rgba(0, 0, 0, 0.25);
 }
-
-.h1 {
-  font-size: 210px;
-}
-
-.carbon-description {
-  text-align: justify;
-  width: 70%;
-}
-
-.jouer {
-  background-color: #315357;
-  border-radius: 6px;
-  color: white;
-  width: 45%;
-  position: relative;
-  height: 70vh;
-}
-
-.h2 {
-  font-size: 50px;
-  text-align: center;
-  text-shadow: 0px 4.87742px 4.87742px rgba(0, 0, 0, 0.25);
-}
-
-.begin {
+section .rules .container {
   display: flex;
-  justify-content: space-evenly;
-  align-items: flex-end;
+  flex-direction: column;
+  padding: 24px;
 }
-
-h3 {
-  font-size: 25px;
-  text-align: center;
-  text-shadow: 0px 4.87742px 4.87742px rgba(0, 0, 0, 0.25);
+section .rules .container h1 {
+  font-size: 32px;
+  padding-bottom: 32px;
 }
-
-.logo {
-  text-align: center;
+section .rules .container .rules-text {
+  display: flex;
+  flex-direction: column;
+  padding-bottom: 16px;
 }
-
-.btn-regles {
-  position: absolute;
-  bottom: 15px;
-  right: 15px;
-  font-size: 25px;
+section .rules .container .rules-text p {
+  font-size: 28px;
+  margin-right: 109px;
+}
+section .rules .container .rules-text div p {
+  font-size: 22px;
+  margin-right: 16px;
+}
+section .rules .container .rules-text div img {
+  width: 84px;
+  height: 103px;
+}
+section .rules .container .slider {
+  display: flex;
+  justify-content: space-between;
+  gap: 10px;
+  padding-bottom: 10px;
+}
+section .rules .container .slider .circle {
+  border-radius: 50%;
+  width: 10px;
+  height: 10px;
+  background: #0E2225;
+  opacity: 0.75;
+}
+section .rules .container .btn {
+  width: 199px;
+  height: 41px;
+  background: #1EE18B;
+  box-shadow: 0px 4.87742px 4.87742px rgba(0, 0, 0, 0.1);
+  border-radius: 5px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+section .rules .container .btn p {
   color: white;
-  background-color: #9EE2FF;
-  border: none;
-  border-radius: 14px;
-  padding: 0px 18px;
-  text-shadow: 0px 4.87742px 4.87742px rgba(0, 0, 0, 0.25);
+}
+section .setup .container_1 {
+  width: 494px;
+  height: 475px;
+  background: rgba(14, 34, 37, 0.6);
+  border: 5px solid #FFFFFF;
+  border-right: 0px;
 }
 
 footer {
@@ -152,175 +145,6 @@ footer {
 .reseaux {
   display: flex;
   gap: 8px;
-}
-
-.box {
-  height: 300px;
-  display: flex;
-  width: 80%;
-  overflow-x: scroll;
-  justify-content: center;
-  align-items: center;
-  gap: 100px;
-  margin-left: 10%;
-}
-
-.card {
-  height: 210px;
-  width: 150px;
-  min-width: 150px;
-  display: block;
-  border: solid 2px #0E2225;
-  border-radius: 22px;
-  position: relative;
-  cursor: pointer;
-}
-
-.card:hover {
-  transform: translateY(-10px);
-  transition: transform 0.1s;
-}
-
-.plus {
-  display: block;
-  width: 30px;
-  height: 3px;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  background-color: black;
-  border-radius: 20px;
-}
-
-.plus::after {
-  content: "";
-  display: block;
-  width: 3px;
-  height: 30px;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  background-color: black;
-  border-radius: 20px;
-}
-
-.imgcard {
-  width: 100%;
-  height: 100%;
-  border-radius: 20px;
-}
-
-.hide {
-  display: none;
-}
-
-.sc-h1 {
-  text-align: center;
-  margin-top: 5vh;
-}
-
-.section-regles {
-  background-color: #315357;
-  margin: 40px;
-  color: #fff;
-  border-radius: 10px;
-}
-
-.h1-regles {
-  font-size: 60px;
-  text-align: center;
-}
-
-.div-regles {
-  display: flex;
-  justify-content: space-around;
-  margin-top: 40px;
-  padding: 30px 0px 50px 0px;
-}
-@media screen and (max-width: 700px) {
-  .div-regles {
-    flex-direction: column;
-    margin-top: 0px;
-  }
-}
-
-.boutons-regles {
-  display: flex;
-  flex-direction: column;
-  gap: 20px;
-}
-@media screen and (max-width: 700px) {
-  .boutons-regles {
-    display: none;
-  }
-}
-
-#boutons-regles-mobile {
-  display: none;
-  background-color: #0E2225;
-  color: #fff;
-  border-radius: 20px;
-  border: none;
-  padding: 0.5rem;
-  margin-left: 10%;
-}
-@media screen and (max-width: 700px) {
-  #boutons-regles-mobile {
-    display: block;
-  }
-}
-
-.section-regles-droite {
-  width: 50%;
-  display: none;
-}
-@media screen and (max-width: 700px) {
-  .section-regles-droite {
-    width: 80%;
-    margin-left: 10%;
-    margin-top: 5%;
-  }
-}
-
-.section-regles-droite p {
-  text-align: justify;
-  margin-top: 16px;
-}
-
-.h2-regles {
-  color: #87EFC1;
-}
-
-.btn-rules {
-  padding: 0.5rem;
-  border-radius: 20px;
-  border: none;
-  background-color: #0E2225;
-  color: #fff;
-}
-
-.btn-rules:hover {
-  cursor: pointer;
-  background-color: #87EFC1;
-  color: #0E2225;
-}
-
-.bouton-retour {
-  color: #fff;
-  background-color: #0E2225;
-  border-radius: 10px;
-  padding: 5px;
-}
-
-.active {
-  display: block;
-}
-
-.btn-active {
-  background-color: #87EFC1;
-  color: #0E2225;
 }
 
 /*# sourceMappingURL=style.css.map */
