--- a/scss/pages/_select-cards.scss
+++ b/scss/pages/_select-cards.scss
@@ -4,7 +4,7 @@
     height: 300px;
     display: flex;
     width: 80%;
-    overflow-x: scroll;
+    overflow-x: auto;
     justify-content: center;
     align-items: center;
     gap: 100px;
@@ -83,9 +83,44 @@
         left: 50%;
         transform: translate(-50%, -50%);
         @include mixins.flexdef;
+        gap: 20px;
         p{
             color: #fff;
         }
-        
+        input{
+            width: 50%;
+            height: 40px;
+            outline: none;
+            border-radius: 25px;
+            padding: 10px;
+            text-align: center;
+            border: solid #87EFC1 3px;
+            background-color: rgba($color: #A0E3FF, $alpha: .3);
+            color: #fff;
+            font-size: 18px;
+            &:focus{
+                border: solid #A0E3FF 3px;
+            }
+        }
+        button{
+            width: 50px;
+            height: 50px;
+            border-radius: 100%;
+            border: solid #A0E3FF 3px;
+            background-color: transparent;
+            color: #A0E3FF;
+            cursor: pointer;
+            &:hover{
+                border: solid #87EFC1 3px;
+                color: #87EFC1;
+            }
+        }
+    }
+}
+
+.cpn{
+    @include mixins.flexdef(true);
+    p{
+        font-size: 20px;
     }
 }
