--- a/scss/pages/_homepage.scss
+++ b/scss/pages/_homepage.scss
@@ -1,11 +1,16 @@
 @use "mixins";
 
+html {
+    background-image: url(../../public/img/homepage/fond-à-pois.png);
+    z-index: 2;
+}
 body {
     background: linear-gradient(135deg, #87EFC1 0%, #A0E3FF 100%);
     background-repeat: no-repeat;
     background-size: cover;
     font-family: "Metrophobic";
-    height: 100vh;
+    position: relative;
+    overflow-x: hidden;
 }
 
 header {
@@ -13,6 +18,8 @@ header {
     display: flex;
     justify-content: space-between;
     box-shadow: 0px 12.1935px 18.2903px rgba(0, 0, 0, 0.25);
+    
+    z-index: 3;
 }
 
 .logo-carbon {
@@ -140,4 +147,11 @@ footer {
 .reseaux {
     display: flex;
     gap: 8px;
+}
+
+.bg-pois {
+    position: absolute;
+    inset: 0;
+    z-index: 3;
+    background-image: url('img/homepage/fond-à-pois.png');
 }
