--- a/scss/pages/_regles.scss
+++ b/scss/pages/_regles.scss
@@ -13,6 +13,7 @@
 .h1-regles {
     font-size: 60px;
     text-align: center;
+    font-family: 'Koulen';
 }
 
 .div-regles {
@@ -69,6 +70,7 @@
 
 .h2-regles {
     color: #fff;
+    font-family: 'Koulen';
 }
 
 .btn-rules {
