--- a/scss/pages/_homepage.scss
+++ b/scss/pages/_homepage.scss
@@ -26,24 +26,20 @@ header {
     box-shadow: 0px 12.1935px 18.2903px rgba(0, 0, 0, 0.25);
     
     z-index: 3;
-    height: 72px;
+    //height: 72px;
 }
 
     .logo-carbon {
         width: auto;
-        height: 64px;
+        height: 70px;
         padding-left: 10px;
     }
 
-    div {
-
-        display: flex;
-        align-items: center;
 
         .fab {
             color: #fff;
             font-size: 25px;
-            margin-right: 32px;
+            margin-right: 20px;
         }
     
         .fab:hover {
@@ -53,11 +49,12 @@ header {
         .btn-articles {
             background-color: #0E2225;
             border: none;
-            border-left: 3px solid white;
+            border-left: 3px solid #fff;
             font-size: 30px;
-            padding: 18px 15px;
+            padding: 12px 15px;
             color: white;
             letter-spacing: 0.15em;
+            font-family: 'Koulen';
         
             @include mixins.breakpoint(700px) {
                 display: none;
@@ -71,9 +68,8 @@ header {
         a {
             text-decoration: none;
         }   
-    }
 
-section {
+.section-hp {
 
     display: flex;
 
@@ -88,9 +84,10 @@ section {
             flex-direction: column;
             padding: 24px;
 
-            h1 {
+            .h1-homepage {
                 font-size: 32px;
                 padding-bottom: 32px;
+                font-family: 'Koulen';
             }
 
             .rules-text {
