--- a/scss/pages/_select-cards.scss
+++ b/scss/pages/_select-cards.scss
@@ -62,7 +62,7 @@
     display: none;
 }
 
-.sc-h1 {text-align: center; margin-top: 5vh;}
+.sc-h1 {text-align: center; margin-top: 5vh; font-family: 'Koulen'}
 
 
 .sc-section{
