--- a/public/style.css
+++ b/public/style.css
@@ -1,3 +1,9 @@
+@charset "UTF-8";
+html {
+  background-image: url(../../public/img/homepage/fond-à-pois.png);
+  z-index: 2;
+}
+
 * {
   padding: 0;
   margin: 0;
@@ -6,103 +12,111 @@
 
 body {
   background: linear-gradient(135deg, #87EFC1 0%, #A0E3FF 100%);
+  background-repeat: no-repeat;
+  background-size: cover;
   font-family: "Metrophobic";
-  height: 100vh;
+  position: relative;
+  overflow-x: hidden;
 }
-body header {
+
+header {
   background-color: #0E2225;
   display: flex;
-  height: 72px;
   justify-content: space-between;
   box-shadow: 0px 12.1935px 18.2903px rgba(0, 0, 0, 0.25);
+  z-index: 3;
 }
-body .logo-carbon {
+
+.logo-carbon {
   width: auto;
-  height: 64px;
+  height: 70px;
   padding-left: 10px;
 }
-body div {
-  display: flex;
-  align-items: center;
-}
-body div .fab {
+
+.fab {
   color: #fff;
   font-size: 25px;
-  margin-right: 32px;
+  margin-right: 20px;
 }
-body div .fab:hover {
+
+.fab:hover {
   color: #87EFC1;
 }
-body div .btn-articles {
+
+.btn-articles {
   background-color: #0E2225;
   border: none;
-  border-left: 3px solid white;
+  border-left: 3px solid #fff;
   font-size: 30px;
-  padding: 18px 15px;
+  padding: 12px 15px;
   color: white;
   letter-spacing: 0.15em;
+  font-family: "Koulen";
 }
 @media screen and (max-width: 700px) {
-  body div .btn-articles {
+  .btn-articles {
     display: none;
   }
 }
-body div .btn-articles:hover {
+
+.btn-articles:hover {
   color: #87EFC1;
 }
-body div a {
+
+a {
   text-decoration: none;
 }
 
-section {
+.section-hp {
   display: flex;
 }
-section .rules {
+.section-hp .rules {
   width: 353px;
   height: 338px;
   background: rgba(201, 248, 227, 0.7);
   box-shadow: 0px 4.88px 4.88px rgba(0, 0, 0, 0.25);
 }
-section .rules .container {
+.section-hp .rules .container {
   display: flex;
   flex-direction: column;
   padding: 24px;
 }
-section .rules .container h1 {
+.section-hp .rules .container .h1-homepage {
   font-size: 32px;
   padding-bottom: 32px;
+  font-family: "Koulen";
 }
-section .rules .container .rules-text {
+.section-hp .rules .container .rules-text {
   display: flex;
   flex-direction: column;
   padding-bottom: 16px;
 }
-section .rules .container .rules-text p {
+.section-hp .rules .container .rules-text p {
   font-size: 28px;
   margin-right: 109px;
 }
-section .rules .container .rules-text div p {
+.section-hp .rules .container .rules-text div p {
   font-size: 22px;
   margin-right: 16px;
 }
-section .rules .container .rules-text div img {
+.section-hp .rules .container .rules-text div img {
   width: 84px;
   height: 103px;
 }
-section .rules .container .slider {
+.section-hp .rules .container .slider {
   display: flex;
   justify-content: space-between;
   gap: 10px;
   padding-bottom: 10px;
 }
-section .rules .container .slider .circle {
+.section-hp .rules .container .slider .circle {
   border-radius: 50%;
   width: 10px;
   height: 10px;
   background: #0E2225;
   opacity: 0.75;
 }
-section .rules .container .btn {
+.section-hp .rules .container .btn {
   width: 199px;
   height: 41px;
   background: #1EE18B;
@@ -112,15 +126,40 @@ section .rules .container .btn {
   justify-content: center;
   align-items: center;
 }
-section .rules .container .btn p {
+.section-hp .rules .container .btn p {
   color: white;
 }
-section .setup .container_1 {
-  width: 494px;
+.section-hp .setup {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 59px 1fr;
+  width: 989px;
   height: 475px;
+}
+.section-hp .setup .grid {
+  width: 100%;
+  height: 100%;
+}
+.section-hp .setup .un {
+  grid-column: 1/2;
+  grid-row: 1/2;
   background: rgba(14, 34, 37, 0.6);
-  border: 5px solid #FFFFFF;
-  border-right: 0px;
+  border: 3px solid #FFFFFF;
+  border-bottom: none;
+}
+.section-hp .setup .deux {
+  grid-column: -3/-2;
+  background: rgba(14, 34, 37, 0.6);
+  border: 3px solid #FFFFFF;
+  border-top: none;
+  border-right: none;
+}
+.section-hp .setup .trois {
+  grid-column: 2/3;
+  grid-row: -2/-1;
+  background: rgba(14, 34, 37, 0.6);
+  border: 3px solid #FFFFFF;
+  border-left: none;
 }
 
 footer {
@@ -142,9 +181,11 @@ footer {
   }
 }
 
-.reseaux {
-  display: flex;
-  gap: 8px;
+.bg-pois {
+  position: absolute;
+  inset: 0;
+  z-index: 3;
+  background-image: url("img/homepage/fond-à-pois.png");
 }
 
 /*# sourceMappingURL=style.css.map */
