--- a/public/style.css
+++ b/public/style.css
@@ -478,4 +478,17 @@ footer {
   cursor: pointer;
 }
 
+.bg-i {
+  background-image: url(../../public/img/homepage/fond-à-pois.png);
+}
+
+.player {
+  border: solid 2px red;
+}
+.player img {
+  border-radius: 100%;
+  width: 100px;
+  height: 100px;
+}
+
 /*# sourceMappingURL=style.css.map */
