--- a/scss/style.scss
+++ b/scss/style.scss
@@ -3,3 +3,4 @@
 @use '../scss/pages/regles.scss';
 @use '../scss/pages/homepage.scss';
 @use '../scss/pages/select-cards.scss';
+@use '../scss/pages/classement.scss';
