--- a/public/style.css
+++ b/public/style.css
@@ -113,6 +113,7 @@
 
 .btn-acc {
   margin-top: 30px;
+  color: #fff;
   padding: 0.5rem;
   border-radius: 5px;
   border: none;
@@ -343,16 +344,16 @@ footer {
   overflow-x: auto;
   justify-content: flex-start;
   align-items: center;
-  gap: 100px;
+  gap: 50px;
   margin-left: 10%;
   position: relative;
   z-index: 4;
 }
 
 .card {
-  height: 210px;
-  width: 150px;
-  min-width: 150px;
+  height: 105px;
+  width: 75px;
+  min-width: 75px;
   display: block;
   border: solid 2px #0E2225;
   border-radius: 22px;
@@ -429,7 +430,7 @@ footer {
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  width: 100%;
+  width: 60%;
   z-index: 4;
   border: 5px solid #fff;
 }
@@ -528,12 +529,18 @@ footer {
 }
 
 .player {
-  border: solid 2px red;
+  border: solid 2px #0E2225;
+  background-color: rgba(14, 34, 37, 0.7);
 }
 .player img {
   border-radius: 100%;
   width: 100px;
   height: 100px;
+}
+
+.podium {
+  position: relative;
+  z-index: 5;
 }
 
 /*# sourceMappingURL=style.css.map */
