--- a/scss/style.scss
+++ b/scss/style.scss
@@ -4,3 +4,4 @@
 @use '../scss/pages/homepage.scss';
 @use '../scss/pages/select-cards.scss';
 @use '../scss/pages/classement.scss';
+@use '../scss/pages/game';
