--- a/public/style.css
+++ b/public/style.css
@@ -601,4 +601,24 @@ footer {
   height: 100px;
 }
 
+.next {
+  cursor: pointer;
+  width: 70%;
+  height: 40px;
+  padding: 10px;
+  text-align: center;
+  font-size: 20px;
+  color: #fff;
+  background-color: #1EE18B;
+  position: relative;
+  border-radius: 5px;
+}
+.next:hover {
+  background-color: #4CC9FF;
+}
+
+.tour span {
+  color: red;
+}
+
 /*# sourceMappingURL=style.css.map */
