--- a/scss/pages/_classement.scss
+++ b/scss/pages/_classement.scss
@@ -37,7 +37,7 @@
             text-align: center;
         }
     }
-    .player:nth-last-child(3) {
+    .player-0 {
         grid-column: 2 / 3;
         grid-row: 2 / 4;
         border-top: 4px solid #fff;
@@ -51,7 +51,7 @@
         }
 
     }
-    .player:nth-last-of-type(2) {
+    .player-1{
         grid-column: 1 / 2;
         grid-row: 3 / 4;
         border-left: 4px solid #fff;
@@ -62,7 +62,7 @@
             height: auto;
         }
     }
-    .player:nth-last-of-type(1){
+    .player-2{
         grid-column: 3 / 4;
         grid-row: 3 / 4;
         border-right: 4px solid #fff;
