--- a/public/style.css
+++ b/public/style.css
@@ -423,6 +423,24 @@ footer {
   width: 60%;
   z-index: 4;
   border: 5px solid #fff;
+  position: relative;
+}
+#cards .chevron {
+  position: absolute;
+  width: 40px;
+  height: auto;
+  z-index: 21;
+  cursor: pointer;
+}
+#cards .chevron:nth-child(1) {
+  top: 5%;
+}
+#cards .chevron:nth-child(2) {
+  bottom: 5%;
+  transform: rotate(180deg);
+}
+#cards .chevron:hover {
+  opacity: 50%;
 }
 
 .content-all {
