fix background pois

--- a/public/style.css
+++ b/public/style.css
@@ -152,7 +152,8 @@
 }
 
 body {
-  background: linear-gradient(135deg, #87EFC1 0%, #A0E3FF 100%);
+  min-height: 100vh;
+  background: url("img/homepage/fond-à-pois.png"), linear-gradient(135deg, #87EFC1 0%, #A0E3FF 100%);
   background-repeat: no-repeat;
   background-size: cover;
   font-family: "Metrophobic";
@@ -320,16 +321,6 @@ footer {
     position: relative;
     text-align: center;
   }
-}
-
-.bg-pois {
-  position: absolute;
-  top: 10vh;
-  left: 0;
-  right: 0;
-  bottom: -10vh;
-  z-index: 3;
-  background-image: url("img/homepage/fond-à-pois.png");
 }
 
 .card {
