--- a/scss/pages/_homepage.scss
+++ b/scss/pages/_homepage.scss
@@ -166,7 +166,7 @@ header {
             height: 100%;
         }
 
-        .un {
+        .one {
             grid-column: 1 / 2;
             grid-row: 1 / 2 ;
             background: rgba(14, 34, 37, 0.6);
@@ -182,7 +182,7 @@ header {
             }
         }
         
-        .deux {
+        .two {
             grid-column: -3 / -2;
             background: rgba(14, 34, 37, 0.6);
             border: 3px solid #FFFFFF;
@@ -196,6 +196,22 @@ header {
                 margin: 16px;
                 padding-top: 16px;
 
+                #player-list {
+                    display: flex;
+                    flex-wrap: wrap;
+                    margin-top: 32px;
+                    margin-left: 80px;
+                    gap: 32px;
+                    width: 80%;
+
+                    #view-player {
+
+                        img {
+                            width: 44px;
+                            height: 45px;
+                        }
+                    }
+                }
 
                 .edit-player {
                     display: flex;
@@ -250,16 +266,85 @@ header {
             }
         }
 
-        .trois {
+        .three {
             grid-column: 2 / 3 ;
             grid-row: -2 / -1 ;
             background: rgba(14, 34, 37, 0.6);
             border: 3px solid #FFFFFF;
             border-left: none;
+            padding-top: 24px;
 
             display: flex;
             align-items: center;
             flex-direction: column;
+
+            h3 {
+                margin-top: 40px;
+                font-family: 'Koulen';
+                font-weight: 400;
+                line-height: 20px;
+                font-size: 24px;
+                color: white;
+            }
+
+            p {
+                font-family: 'Koulen';
+                font-weight: 100;
+                font-size: 16px;
+                color: white;
+            }
+
+            .laps {
+                display: flex;
+                justify-content: space-between;
+                gap: 32px;
+                margin-top: 16px;
+                
+                .lap-btn {
+                    width: 42px;
+                    height: 37px;
+                    background-color: rgba(0, 0, 0, 0);
+                    color: white;
+                    border: 3px solid #FFFFFF;
+                    border-radius: 10px;
+                    gap: 100px;
+                }   
+            }
+
+            .event {
+                display: flex;
+                margin-bottom: 32px;
+                margin-top: 16px;
+                gap: 32px;
+
+                .frequency {
+                    width: 42px;
+                    height: 37px;
+                    background-color: rgba(0, 0, 0, 0);
+                    color: white;
+                    border: 3px solid #FFFFFF;
+                    border-radius: 10px;
+                    font-family: 'Koulen';
+                    font-weight: 400;
+                    font-size: 16px;
+                    color: white;
+                }
+                
+            }
+
+            #submit-setup {
+                width: 232px;
+                height: 48px;
+                background: #1EE18B;
+                box-shadow: 0px 2px 0px rgba(0, 0, 0, 0.1);
+                border-radius: 5px;
+                border: none;
+                color: white;
+                font-family: 'Koulen';
+                font-weight: 400;
+                font-size: 24px;
+                text-align: center;
+            }
         }
     }
 }
